--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     .multi-letter-wrapper {
       position: absolute;
-      top: 80px;
+      top: 140px; /* adjusted from 80px to 140px */
       height: 60px;
       background-color: rgba(0, 0, 255, 0.1);
       border: 2px solid blue;
