--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     .above-symbol, .below-symbol {
       position: relative;
-      font-size: 2em;
+      font-size: 2.5em;
       cursor: pointer;
       user-select: none;
       height: 40px;
@@ -61,14 +61,14 @@
       height: 120px;
       background-color: black;
       cursor: ew-resize;
-      top: 120px;
+      top: 140px;
       z-index: 3;
       touch-action: none;
     }
 
     .multi-letter-wrapper {
       position: absolute;
-      top: 140px;
+      top: 100px;
       height: 60px;
       background-color: rgba(0, 0, 255, 0.1);
       border: 2px solid blue;
@@ -186,6 +186,7 @@
       };
 
       el.addEventListener("mousedown", (e) => {
+        e.preventDefault();
         offsetX = e.clientX - el.getBoundingClientRect().left;
         document.addEventListener("mousemove", onMouseMove);
         document.addEventListener("mouseup", stopMouseMove);
