--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       line-height: 60px;
     }
 
-    .above-symbol, .below-symbol {
+    .above-symbol {
       position: relative;
-      font-size: 3.5em;
+      font-size: 4.5em; /* Larger macron and breve */
       cursor: pointer;
       user-select: none;
       height: 50px;
@@ -46,6 +46,15 @@
     }
 
     .below-symbol {
+      position: relative;
+      font-size: 2em; /* Smaller V and C */
+      cursor: pointer;
+      user-select: none;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 1px dashed #ccc;
       margin-top: 5px;
     }
 
@@ -58,7 +67,7 @@
     .divider {
       position: absolute;
       width: 4px;
-      height: 120px;
+      height: 100px;
       background-color: black;
       cursor: ew-resize;
       top: 160px;
@@ -68,7 +77,7 @@
 
     .multi-letter-wrapper {
       position: absolute;
-      top: 130px;
+      top: 120px;
       height: 60px;
       background-color: rgba(0, 0, 255, 0.1);
       border: 2px solid blue;
