--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 3px dashed #ccc;
+      border: 5px dashed white;
       margin-bottom: 5px;
     }
 
@@ -54,7 +54,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px dashed #ccc;
+      border: 5px dashed #ccc;
       margin-top: 5px;
     }
 
@@ -67,10 +67,10 @@
     .divider {
       position: absolute;
       width: 4px;
-      height: 60px;
+      height: 100px;
       background-color: black;
       cursor: ew-resize;
-      top: 160px;
+      top: 100px;
       z-index: 3;
       touch-action: none;
     }
