--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <div id="word-display"></div>
 
   <script>
-    const aboveOptions = ["", "\u02D8", "\u00AF"];
+    const aboveOptions = ["", "\u0259", "\u02D8", "\u00AF"];
     const belowOptions = ["", "V", "C"];
     let currentResize = null;
     let pinchStartWidth = null;
